--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap"
     /></noscript>
     <div id="root"></div>
+	 <div id="portal"></div>
   </body>
 </html>
